# BreakOutGame

./: CMakeLists.txt  Dimensions_Fix_Notes.md  README.md
Engine/include/Core/: log.h
Engine/include/Graphics/: Camera.h  Font.h  IndexBuffer.h  Mesh.h  Model.h  ParticleSystem.h  PostProcessor.h  Shader.h  SpriteRenderer.h  TextRenderer.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Engine/include/Resource/: Resource.h
Engine/src/Core/: log.cpp
Engine/src/Graphics/: Camera.cpp  Font.cpp  IndexBuffer.cpp  Mesh.cpp  Model.cpp  ParticleSystem.cpp  PostProcessor.cpp  Shader.cpp  SpriteRenderer.cpp  TextRenderer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  stb_image.cpp
Engine/src/Resource/: Resource.cpp
Game/Resources/Shaders/: particle.frag  particle.vert  postProcessor.frag  postProcessor.vert  sprite.frag  sprite.vert  text.vert
Game/include/: BallObject.h  Game.h  GameLevel.h  GameObject.h  PowerUp.h  SimpleFont.h
Game/src/: BallObject.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  main.cpp
